Revision history for Perl extension Finance::QIF.

2.06  Sat Apr 28 10:25:00 2007
        - Fixed bug 1704960 win32 line end /record sep test failed
        - Added pod and pod-coverage tests

2.05  Sun Feb 04 13:00:00 2007
	- Better recognition of headers that have trailing white space
	- Added support for budget ("B") item in category type
	- Added support for total ("U") item in memorized type
	- Number of documentation changes/corrections

2.04  Wed Jul 19 9:00:00 2006
	- Added autodetect option
	- Fixed bug that caused wrong separator to be used on output files
        - Added support for standard file open options
        - Changed separator support to move to single record_separator

2.03  Mon Apr 17 09:33:00 2006
	- Added support for "U" in investment and non-investment accounts.
	- Added support for trim_white_space.

2.02  Mon Mar 19 13:06:00 2006
	- Fixed [rt.cpan.org #18246] Splits don't always have memo fields.

2.01  Mon Mar 3 15:25:00 2006
	- Fixed bug that returned empty record in some cases.
	- Fixed a few typos in documentation.

2.00  Mon Feb 22 15:45:00 2006
	- Initial 2.0 release of Finance::QIF this version supports all know
          QIF record types and values. The API's have changed since 1.X.

2.00B Mon Jan 26 19:14:00 2006
	- Beta version of Finance::QIF that should be able to read and
          write exports from Quicken.

0.01  Mon Jan  9 12:07:56 2006
	- original version; created by h2xs 1.23 with options
		-AX -n Finance::QIF