@@ -3,6 +3,8 @@ Revision history for Perl extension Finance::QIF.
 2.06  Sat Apr 28 10:25:00 2007
         - Fixed bug 1704960 win32 line end /record sep test failed
         - Added pod and pod-coverage tests
+        - Adjustments to MANIFEST and Makefile.PL for better compatability
+          with current versions of ExtUtils::MakeMaker
 
 2.05  Sun Feb 04 13:00:00 2007
 	- Better recognition of headers that have trailing white space
